# safemetadata

./: .gitignore  Cargo.toml  README.md
notebooks/: load_check.ipynb
src/: fetch.rs  file.rs  lib.rs  main.rs  metadata.rs  parse.rs  parser.rs  table.rs  utils.rs
