[package]
name = "safemetadata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
serde = "1.0.204"
serde_json = "1.0.122"
hf-hub = "0.3.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
tabled = "0.16.0"
terminal_size = "0.3.0"
