[package]
name = "safemetadata"
version = "0.1.0"
edition = "2021"

[lib]
name = "safemetadata"
path = "src/lib.rs"

[[bin]]
name = "safemetadata"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "tabled", "terminal_size"]


[dependencies]
anyhow = "1.0.86"
serde = "1.0.204"
serde_json = "1.0.122"
hf-hub = "0.3.2"
reqwest = { version = "0.12.5", features = ["blocking"] }

clap = { version = "4.5.13", features = ["derive"], optional = true }
tabled = { version = "0.16.0", optional = true }
terminal_size = { version = "0.3.0", optional = true }
